--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,11 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:fitsSystemWindows="true"
             android:windowSoftInputMode="adjustResize"
             android:theme="@style/Theme.NotesRoom">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
